[references] Add JSON

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1471,6 +1471,12 @@ Title = {{IPGP}},
 url = {http://www.ipgp.fr}
 }
 
+@Misc{json,
+  Title                    = {{Introducing JSON}},
+  HowPublished             = {Internet},
+  Url                      = {https://www.json.org},
+}
+
 @Misc{jw2caps,
   Title                    = {{jw2caps}},
   HowPublished             = {gempa plugin},
