[documentation] Replace web address gfz-potsdam.de by gfz.de

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1338,13 +1338,13 @@ doi = {10.1016/0031-9201(96)03141-X}
 @Misc{gempa,
   Title                    = {{gempa GmbH}},
   HowPublished             = {The SeisComP development and maintenance company},
-  Url                      = {https://www.gempa.de/},
+  Url                      = {https://www.gempa.de},
 }
 
 @Misc{geofon,
   Title                    = {{GEOFON}},
   HowPublished             = {GFZ German Resarch Center for Geosciences},
-  Url                      = {https://geofon.gfz-potsdam.de/},
+  Url                      = {https://geofon.gfz.de},
 }
 
 @Misc{gempa-download,
@@ -2340,7 +2340,7 @@ url = {http://www.ipgp.fr}
 @Misc{uml,
   Title                    = {{SeisComP UML diagram}},
   HowPublished             = {GEOFON},
-  Url                      = {https://geofon.gfz-potsdam.de/_uml_new/},
+  Url                      = {https://geofon.gfz.de/_uml_new/},
 }
 
 @Misc{unavco,
