[documentation] Replace IRIS by EarthScope

--- a/doc/base/references.bib
+++ b/doc/base/references.bib
@@ -1464,9 +1464,15 @@
 }
 
 @Misc{iris-dmc,
-  Title                    = {{IRIS DMC}},
+  Title                    = {{EarthScope DMC - Availability}},
   HowPublished             = {FDSNWS availability Web Service Documentation},
-  Url                      = {https://service.iris.edu/fdsnws/availability/1/},
+  Url                      = {https://service.earthscope.org/fdsnws/availability/1/},
+}
+
+@Misc{earthscope-dmc-av,
+  Title                    = {{EarthScope DMC - Availability}},
+  HowPublished             = {FDSNWS availability Web Service Documentation},
+  Url                      = {https://service.earthscope.org/fdsnws/availability/1/},
 }
 
 @Misc{isc,
